# ImageCompressor

./: CMakeLists.txt  image_compressor  main.cpp  qml.qrc
image_compress/: CMakeLists.txt
image_compress/include/: Bitmap.h  Image.h  ImageCompressor.h  ImageReader.h
image_compress/source/: ImageCompressor.cpp  ImageReader.cpp
include/: controller.h  file_model.h  ui_controller.h
source/: controller.cpp  file_model.cpp  ui_controller.cpp
ui/: FilesPage.qml  error.qml  main.qml
